修改网页标题为北京四中历史课大航海时代AI体验并移除菲律宾群岛坐标

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="0; url=map_navigation.html">
-    <title>重定向到海上航行模拟</title>
+    <title>北京四中历史课大航海时代AI体验</title>
 </head>
 <body>
-    <p>如果您没有被自动重定向，请<a href="map_navigation.html">点击这里</a>访问海上航行模拟页面。</p>
+    <p>如果您没有被自动重定向，请<a href="map_navigation.html">点击这里</a>访问北京四中历史课大航海时代AI体验。</p>
 </body>
 </html> 
