--- a/map_navigation.html
+++ b/map_navigation.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>海上航行模拟</title>
+    <title>北京四中历史课大航海时代AI体验</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>海上航行模拟</h1>
+        <h1>北京四中历史课大航海时代AI体验</h1>
         <div class="main-content">
             <div class="game-container">
                 <canvas id="mapCanvas"></canvas>
