修复资源文件路径，确保图片和CSS能正确加载

--- a/map_navigation.html
+++ b/map_navigation.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>北京四中历史课大航海时代AI体验</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <div class="container">
@@ -54,7 +54,7 @@
             <p>碰到大陆边缘会反弹，地图上的标记点可以拖动</p>
         </div>
     </div>
-    <script src="ship_navigation.js"></script>
+    <script src="./ship_navigation.js"></script>
     <script type="module">
         import { initializeLocationMarkers } from './locations.js';
         document.addEventListener('DOMContentLoaded', function() {
