优化页面加载速度：1. 添加加载指示器 2. 预加载资源 3. 启用缓存

--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="0; url=map_navigation.html">
+    <meta http-equiv="Cache-Control" content="max-age=3600">
     <title>北京四中历史课大航海时代AI体验</title>
+    <link rel="preload" href="./style.css" as="style">
+    <link rel="preload" href="./original_map.png" as="image">
+    <link rel="preload" href="./ship.png" as="image">
+    <link rel="preload" href="./ship_navigation.js" as="script">
 </head>
 <body>
     <p>如果您没有被自动重定向，请<a href="map_navigation.html">点击这里</a>访问北京四中历史课大航海时代AI体验。</p>
